# Library_fastapi

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.db  test_log.txt
alembic/: README.md  env.py
app/: core.py  crud.py  db.py  main.py  models.py  schemas.py
app/api/: deps.py
app/api/routers/: library.py  notes.py
app/utils/: logs_parser.py
scripts/: parse_logs.py  testNotesREST.py
tests/: conftest.py  test_library_api.py  test_logs_parser.py  test_notes_api.py
