[tool.poetry]
name = "fastapi-library"
version = "0.1.0"
description = "Library REST API with FastAPI, SQLAlchemy and PostgreSQL"
authors = ["Vadim <vadim@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = {extras=["standard"], version="^0.22.0"}
SQLAlchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"
pydantic = "^1.10.9"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
alembic = "^1.16.5"

[tool.poetry.scripts]
# optional

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
